k8s-minikube-ingress/go-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-ingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: go-web-svc
                port:
                  number: 8080
